Updated the font and content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Zay Yar Lin</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
     <link href="style.css" rel="stylesheet">
   </head>
 
@@ -33,15 +33,9 @@
       <div class="row">
         <div class="col-md-8">
           <p class="content">
-          I am a senior software engineer at
+          I am a senior analytics engineer at
           <a href="http://www.lta.gov.sg/">Land Transport Authority (LTA)</a>, where I build the backend services of the automated fare collection system for
-          Singapore's public transport system.
-          </p>
-          <p class="content">
-          In my free time I work on software projects that interest me.
-          I am also attending part-time <a href="http://www.iss.nus.edu.sg/">Master of Technology in Knowledge Engineering</a>
-          programme at NUS, where I study cool stuff like data analytics and machine learning.
-          My passion and goal is to build artificial intelligent systems that improve the daily life of people.
+          Singapore's public transport system, as well as analytics products to monitor and improve the devices and services, detect fraud and profile commuter travel patterns.
           </p>
         </div>
         <div class="col-md-4 thumbnail">
